[gd_scene load_steps=10 format=3 uid="uid://b5q4k8h5yskx"]

[ext_resource type="Script" path="res://Scripts/HealthComponent.gd" id="1_q801n"]
[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_uak1f"]
[ext_resource type="Script" path="res://Scripts/HurtboxComponent.gd" id="2_nwn55"]
[ext_resource type="PackedScene" uid="uid://cqnfeqwdyuef5" path="res://Assets/sword.glb" id="5_03oht"]
[ext_resource type="PackedScene" uid="uid://4v0ymcds2oi8" path="res://Scenes/health_bar_3d.tscn" id="6_n2la5"]
[ext_resource type="Script" path="res://Scripts/HitboxComponent.gd" id="6_v5i7x"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_n5pd5"]
points = PackedVector3Array(1.16822, 0.415632, 0.923501, 1.16822, -0.457321, 0.923501, -1.16011, -0.457321, 0.923501, -1.16011, 0.415632, 0.923501, 0.974045, 0.0275292, -8.38728, 0.00405896, 0.221538, -8.48502, -0.869065, -0.166308, -8.38728, 0.2951, 0.318628, 2.57441, 0.2951, -0.263313, -8.5804, -0.286982, -0.263313, 2.57441, -0.965927, 0.0275292, -8.38728, 0.877183, -0.166308, -8.38728, -0.286982, -0.263313, -8.5804, -0.286982, 0.318628, 2.57441, 0.2951, -0.263313, 2.57441, 0.100921, -0.166308, -9.35757, -0.383844, -0.457321, 0.536091, -1.16011, 0.415632, 0.729207, 1.16822, 0.415632, 0.729207, 0.586142, 0.124534, -8.38728, -0.578024, 0.124534, -8.38728, -1.16011, -0.457321, 0.729207, 0.100921, -0.263313, -8.77587, -0.0928029, -0.166308, -9.35757, -0.286982, 0.124534, -8.77587, 0.2951, 0.124534, -8.77587, 0.2951, 0.415632, 0.536091, 0.100921, 0.221538, -8.38728, 1.07113, -0.457321, 0.729207, 0.391962, -0.263313, -8.38728, -0.383844, -0.263313, -8.38728, 0.780093, 0.0275292, -8.67695)

[sub_resource type="Animation" id="Animation_4hdvp"]
resource_name = "sword_enemy"
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody3D/sword")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array()

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cbem3"]
_data = {
"sword_enemy": SubResource("Animation_4hdvp")
}

[node name="Enemy" type="Node3D" groups=["enemy"]]
script = ExtResource("1_uak1f")

[node name="Model" type="Node3D" parent="."]

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("1_q801n")

[node name="HurtboxComponent" type="Area3D" parent="." node_paths=PackedStringArray("health_component")]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0, 0)
script = ExtResource("2_nwn55")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtboxComponent"]
transform = Transform3D(0.109169, 0, 4.77193e-09, 4.77193e-09, 0, -0.109169, 0, 0.109169, 0, 0.00737082, 0.0163756, -0.0287949)
shape = SubResource("ConvexPolygonShape3D_n5pd5")

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
motion_mode = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
transform = Transform3D(0.117354, 0, 5.12971e-09, 5.12971e-09, 0, -0.117354, 0, 0.117354, 0, 0.0081079, 0.0180131, -0.0316744)
shape = SubResource("ConvexPolygonShape3D_n5pd5")

[node name="sword" parent="CharacterBody3D" instance=ExtResource("5_03oht")]
transform = Transform3D(-5.24912e-09, -0.120086, 0, 0.120086, -5.24912e-09, 0, 0, 0, 0.120086, 0.0081079, 2.38419e-07, -0.0316744)

[node name="Cube" parent="CharacterBody3D/sword" index="0"]
transform = Transform3D(0, 0, -1, -1, 0, 0, 0, 1, 0, 0.15, -1.86265e-09, 0)

[node name="HitboxComponent" type="Area3D" parent="CharacterBody3D/sword"]
script = ExtResource("6_v5i7x")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D/sword/HitboxComponent"]
transform = Transform3D(0, 0, -0.97725, -0.97725, 0, 0, 0, 0.97725, 0, 0.15, 0, 0)
shape = SubResource("ConvexPolygonShape3D_n5pd5")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="CharacterBody3D"]
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(1, 0, 1, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cbem3")
}

[node name="HealthBar3D" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("6_n2la5")]
health_component = NodePath("../HealthComponent")

[editable path="CharacterBody3D/sword"]
